2008-10-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump version number to 8.5.6b1 to distinguish
	* library/tk.tcl:	CVS development snapshots from the 8.5.5 and
	* unix/configure.in:	8.5.6 releases.
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf (2.59)
	* win/configure:

2008-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/scale.tcl: Backported keyboard bindings for ttk::scale

2008-10-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	*** 8.5.5 TAGGED FOR RELEASE ***

	* generic/tkCanvas.c (CanvasWidgetCmd): Corrected result generation.

2008-10-10  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump to 8.5.5 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updates for 8.5.5 release.

	* unix/Makefile.in:	Relax constraints in index script so that
	* win/Makefile.in:	each Tk 8.5.* release may be [package require]d
	* win/makefile.vc:	into any Tcl 8.5.* interp.  [Bug 1890438].

2008-10-09  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkListbox.c:	Make literal return values consistent with
	those generated by Tcl_PrintDouble().

	* tests/canvText.test:	Backport test updates in light of the
	* tests/entry.test:	2008-10-05 commit.
	* tests/listbox.test:
	* tests/scrollbar.test:
	* tests/spinbox.test:
	* tests/textDisp.test:

	* generic/tkEntry.c:	Fix missing space constructing the scroll
	command.

2008-10-05  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* win/tkWinScrlbr.c:		Convert 'sprintf(..."%g"...)' to the
	* macosx/tkMacOSXScrlbr.c:	locale-insensitive Tcl_PrintDouble.
	* generic/tkScrollbar.c:	[Bug 2112563]  NOTE: Tcl_PrintDouble
	* generic/tkListbox.c:		is sensitive to the value of
	* generic/tkEntry.c:		::tcl_precision.
	* generic/tkCanvText.c:		*** POTENTIAL INCOMPATIBILITY ***
	* generic/tkArgv.c:

2008-08-25  Todd M. Helfter  <tmh@users.sourceforge.net>
